# advent_of_code

./: .gitignore  .importlinter  .pre-commit-config.yaml  README.md  cspell-custom-dict.txt  justfile  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  ruff.toml
config/: main.json
docs/coding-guidelines/style/: COMMITS.md
docs/coding-guidelines/versioning/: BRANCHES.md  VERSIONING.md
src/advent_of_code/: __init__.py  config.py  errors.py  result.py
src/advent_of_code/analyze/: __init__.py
src/advent_of_code/export/: __init__.py
src/advent_of_code/load/: __init__.py
src/advent_of_code/load/year_2025/: dial.py
src/advent_of_code/process/: __init__.py
src/advent_of_code/year_2025/day_01/: __init__.py  dial.py  parser.py  solve.py
src/advent_of_code/year_2025/day_02/: __init__.py  gift_shop.py  parser.py  solve.py
tests/integration/: test_example.py
tests/unit/: test_errors.py  test_example.py  test_result.py
tests/year_2025/: test_day_01.py  test_day_02.py
